# flara-shop

./: Cargo.toml  README.md
.reuse/: dep5
flarapak/: Cargo.toml
flarapak/src/: app.rs  lib.rs  native.rs  prelude.rs  template.rs
flarapak/src/schemas/: appstream.rs  appstream_test.xml  flatpak_repoconfig.ini  flatpakref.ini  mod.rs  remote.rs
flarapak/src/schemas/appstream/: appstream_test.xml  mod.rs
src/: app.rs  flathub.rs  main.rs  remote.rs
