[package]
name = "flara-shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../iced/"}
iced_futures = { path = "../iced/futures",  features = ["tokio"]}
flarapak = { path = "./flarapak"}
iced_native = { path = "../iced/native" }

[workspace]
members = ["./flarapak"]