[package]
name = "flarapak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde_derive = "1.0.146"
serde = { version = "1.0.146", features = ["serde_derive"]} # Quick-xml depends on serde_derive
quick-xml = { version = "0.25.0", features = ["serialize"] }
configparser = "3.0.2"
[features]
default = ["native"]
native = []

