# SPDX-FileCopyrightText: 2022 Fiana Fortressia
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "flarapak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde_derive = "1.0.146"
serde = { version = "1.0.146", features = ["serde_derive"]} # Quick-xml depends on serde_derive
quick-xml = { version = "0.25.0", features = ["serialize"] }
configparser = "3.0.2"
dirs = "4.0.0"
flate2 = "1.0.24"
async-trait = "0.1.58"

regex = "1.6.0"
lazy_static = "1.4.0"
[features]
default = ["native"]
native = []

